Add commands and cursor.

--- a/css/blocks.css
+++ b/css/blocks.css
@@ -1,8 +1,7 @@
-
 .cm-editor .cmb-code {
   color: var(--mm-c-code-text);
   background-color: var(--mm-c-code-bg);
-  font-family: var(--mm-f-mono);
+  font-family: var(--mm-f-code);
   padding-left: var(--mm-s-code-padding);
   padding-right: var(--mm-s-code-padding);
 }
@@ -16,5 +15,16 @@
 }
 
 .cm-editor .cmb-quote {
-  background-color: var(--mm-c-code-bg);
+  color: var(--mm-c-quote-text);
+  background-color: var(--mm-c-quote-bg);
+  padding-left: var(--mm-s-quote-padding);
+  padding-right: var(--mm-s-quote-padding);
+}
+.cm-editor .cmb-quote-open {
+  border-radius: var(--mm-s-quote-radius) var(--mm-s-quote-radius) 0 0;
+  padding-top: var(--mm-s-quote-padding);
+}
+.cm-editor .cmb-quote-close {
+  border-radius: 0 0 var(--mm-s-quote-radius) var(--mm-s-quote-radius);
+  padding-bottom: var(--mm-s-quote-padding);
 }
