--- a/css/vars.css
+++ b/css/vars.css
@@ -1,8 +1,16 @@
+@font-face {
+  font-family: mmspace;
+  src: local(Menlo), local(Monaco), local(Consolas), local("Courier New");
+  unicode-range: U+0020;
+}
+
 .markmirror {
   --mm-f-sys: -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen, Ubuntu, "Droid Sans", "Helvetica Neue";
   --mm-f-cjk: "PingFang SC", "Hiragino Sans GB", "Droid Sans Fallback", "Microsoft YaHei";
   --mm-f-mono: Menlo, Monaco, Consolas, "Courier New", monospace;
-  --mm-f-content: var(--mm-f-sys), var(--mm-f-cjk), sans-serif;
+  --mm-f-code: var(--mm-f-mono), monospace;
+  --mm-f-content: var(--mm-f-mono), var(--mm-f-cjk), monospace;
+  --mm-f-content: mmspace, var(--mm-f-sys), var(--mm-f-cjk), sans-serif;
 
   --mm-c-link: #26a6ed;
 
@@ -10,4 +18,9 @@
   --mm-s-code-radius: 4px;
   --mm-c-code-bg: #f9f9f9;
   --mm-c-code-text: #24292f;
+
+  --mm-s-quote-padding: 0.5rem;
+  --mm-s-quote-radius: 4px;
+  --mm-c-quote-bg: #f9f9f9;
+  --mm-c-quote-text: #24292f;
 }
