Update syntax highlight css

--- a/css/blocks.css
+++ b/css/blocks.css
@@ -2,6 +2,8 @@
   font-family: var(--mm-f-code);
   padding-left: var(--mm-s-code-padding);
   padding-right: var(--mm-s-code-padding);
+  color: var(--mm-c-code-text);
+  background-color: var(--mm-c-code-background);
 }
 .cm-editor .cmb-code-open {
   border-radius: var(--mm-s-code-radius) var(--mm-s-code-radius) 0 0;
@@ -15,15 +17,13 @@
 
 .cm-editor .cmb-quote {
   color: var(--mm-c-quote-text);
-  background-color: var(--mm-c-quote-bg);
+  background-color: var(--mm-c-quote-background);
   padding-left: var(--mm-s-quote-padding);
   padding-right: var(--mm-s-quote-padding);
 }
 .cm-editor .cmb-quote-open {
-  border-radius: var(--mm-s-quote-radius) var(--mm-s-quote-radius) 0 0;
   padding-top: var(--mm-s-quote-padding);
 }
 .cm-editor .cmb-quote-close {
-  border-radius: 0 0 var(--mm-s-quote-radius) var(--mm-s-quote-radius);
   padding-bottom: var(--mm-s-quote-padding);
 }
