--- a/css/vars.css
+++ b/css/vars.css
@@ -12,13 +12,24 @@
   --mm-f-content: var(--mm-f-mono), var(--mm-f-cjk), monospace;
   --mm-f-content: mmspace, var(--mm-f-sys), var(--mm-f-cjk), sans-serif;
 
+  --mm-c-caret: black;
   --mm-c-link: #26a6ed;
 
   --mm-s-code-padding: 0.5rem;
   --mm-s-code-radius: 4px;
+  --mm-c-code-text: #24292f;
+  --mm-c-code-background: #f9f9f9;
 
   --mm-s-quote-padding: 0.5rem;
-  --mm-s-quote-radius: 4px;
-  --mm-c-quote-bg: #f9f9f9;
   --mm-c-quote-text: #24292f;
+  --mm-c-quote-background: #f0f0f0;
+}
+
+.darkcode {
+  --mm-c-code-text: #c9d1d9;
+  --mm-c-code-background: #292d3e;
+}
+
+.darkcode .cmb-code {
+  caret-color: white;
 }
