--- a/css/vars.css
+++ b/css/vars.css
@@ -7,6 +7,7 @@
 
   --mm-c-caret: black;
   --mm-c-link: #26a6ed;
+  --mm-c-url: #26a6ed;
   --mm-c-mark: #faf594;
 
   --mm-s-block-padding: 0.5rem;
