--- a/css/blocks.css
+++ b/css/blocks.css
@@ -7,7 +7,8 @@
 }
 .cm-editor .cmb-code-open {
   border-radius: var(--mm-s-code-radius) var(--mm-s-code-radius) 0 0;
-  padding-top: var(--mm-s-code-padding);
+  padding-top: calc(var(--mm-s-code-padding) / 2);
+  padding-bottom: calc(var(--mm-s-code-padding) / 2);
 }
 .cm-editor .cmb-code-close {
   border-radius: 0 0 var(--mm-s-code-radius) var(--mm-s-code-radius);
