Make --syntax-meta darker

--- a/css/tokens.css
+++ b/css/tokens.css
@@ -1,5 +1,5 @@
 .markmirror {
-  --syntax-meta: #d4d4d4;
+  --syntax-meta: #9c9c9c;
   --syntax-comment: #6e7781;
   --syntax-constant: #0550ae;
   --syntax-entity: #268bd2;
