--- a/css/blocks.css
+++ b/css/blocks.css
@@ -6,12 +6,14 @@
   background-color: var(--mm-c-code-background);
 }
 .cm-editor .cmb-code-open {
-  border-radius: var(--mm-s-code-radius) var(--mm-s-code-radius) 0 0;
+  border-top-left-radius: var(--mm-s-code-radius);
+  border-top-right-radius: var(--mm-s-code-radius);
   padding-top: calc(var(--mm-s-code-padding) / 2);
   padding-bottom: calc(var(--mm-s-code-padding) / 2);
 }
 .cm-editor .cmb-code-close {
-  border-radius: 0 0 var(--mm-s-code-radius) var(--mm-s-code-radius);
+  border-bottom-left-radius: var(--mm-s-code-radius);
+  border-bottom-right-radius: var(--mm-s-code-radius);
   padding-top: calc(var(--mm-s-code-padding) / 2);
   padding-bottom: calc(var(--mm-s-code-padding) / 2);
 }
